# serializer version: 1
# name: test_BSRGAN
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_BSRGAN_2x
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_ESRGAN_community
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_ESRGAN_community_2x
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_ESRGAN_community_4x
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '32nf',
      '12nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_ESRGAN_community_8x
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=8,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealESRGAN_x2plus
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=4, multiple_of=4, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
      'unshuffle',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealESRGAN_x4plus
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealESRGAN_x4plus_anime_6B
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '6nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealESRNet_x4plus
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealSR_DPED
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealSR_JPEG
  ImageModelDescriptor(
    architecture=ESRGANArch(
      id='ESRGAN',
      name='ESRGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=2, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
